# Langgraph

./: .gitignore  Agent1.ipynb  Agent1.py  Agent2.py  Agent2_1.py  MY_RETRIEVER.py  README.md  ReAct.py  check_lc_nvidia.py  check_openAI.py  drafter.py  excercise1.ipynb  excercise2sol.ipynb  excercise3.ipynb  excercise4.ipynb  excercise4sol.ipynb  excercise5sol.ipynb  excersice2.ipynb  exercise5.ipynb  exercise5sol.py  pyproject.toml  pyton_clarity.ipynb
