[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "gradio>=6.19.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.4",
    "nest-asyncio>=1.6.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "setuptools>=82.0.1",
    "typing-extensions>=4.15.0",
]

[tool.uv.workspace]
members = [
    "AI_Search_Agent",
]
